Update persona generator

--- a/src/main/webapp/app/generators/idea-generator/idea-generator.component.html
+++ b/src/main/webapp/app/generators/idea-generator/idea-generator.component.html
@@ -175,7 +175,7 @@
 												</dd>
 											</dl>
 											<dl>
-												<dt>Handicapes:</dt>
+												<dt>Handicaps:</dt>
 												<dd><textarea class="form-control" [(ngModel)]="pe_handicapsConstraint"
 														placeholder="a, b, c"></textarea>
 												</dd>
