--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -10,20 +10,20 @@
 	</div>
 	<div [ngbCollapse]="collapseSummary">
 		<div *ngIf="!isLoading">
-			<h2 (click)="changeBook(book.id, book.name)">
+			<h2 (click)="changeBook(book.id!, book.name!)">
 				{{book.name}}
 			</h2>
 			<div *ngFor="let part of book.parts">
-				<h3 (click)="toggleCollapsePart(part.id); changePart(part.id, part.name)">
+				<h3 (click)="toggleCollapsePart(part.id!); changePart(part.id!, part.name!)">
 					{{part.name}}
 					<span *ngIf="!forceOpenAll()">
-						<fa-icon icon="angle-up" *ngIf="!collapseParts[part.id]"></fa-icon>
-						<fa-icon icon="angle-down" *ngIf="collapseParts[part.id]"></fa-icon>
+						<fa-icon icon="angle-up" *ngIf="!collapseParts[part.id!]"></fa-icon>
+						<fa-icon icon="angle-down" *ngIf="collapseParts[part.id!]"></fa-icon>
 					</span>
 				</h3>
-				<div [ngbCollapse]="isPartCollapse(part.id)">
+				<div [ngbCollapse]="isPartCollapse(part.id!)">
 					<div *ngFor="let chapter of part.chapters">
-						<h4 (click)="changeChapter(chapter.id, chapter.name)">{{chapter.number}} {{chapter.name}}</h4>
+						<h4 (click)="changeChapter(chapter.id!, chapter.name!)">{{ chapter.number! }} {{ chapter.name! }}</h4>
 					</div>
 				</div>
 			</div>
