--- a/src/main/webapp/content/scss/variables.scss
+++ b/src/main/webapp/content/scss/variables.scss
@@ -2,8 +2,12 @@
 
 /* RGB */
 $white: #ffffff;
+$white_transparent: #ffffffa0;
+
+$pale_gold: #fff2a8;
 $gold: #efcc07;
 $dark_gold: #ccad00;
+$gold_transparent: #efcc07a0;
 $gray: #e2e2e2;
 $black: #000000;
 $book_color: #ffdfca;
