Bug fix page height

--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,6 +1,6 @@
 <jhi-page-ribbon></jhi-page-ribbon>
 
-<div>
+<div class="navbar-container">
     <router-outlet name="navbar"></router-outlet>
 </div>
 
